--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #data source
-spring.datasource.url=jdbc:mysql://localhost:3306/pizzeria_db
+spring.datasource.url=jdbc:mysql://localhost:3306/album_db
 spring.datasource.username=root
 spring.datasource.password=root
 # Hibernate ddl auto (create, create-drop, validate, update)
